--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,80 +1,72 @@
-* { 
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.container {
+    max-width: 600px;
+    margin: 0 auto;
+    margin-top: 50px;
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
+p.Bio {
+    text-align: justify;
 }
 
-.logo a {
-    text-decoration:  none;
-    color: #333;
+hr {
+    width: 100px;
+    height: 2px;
+    background-color: #2199e8;
+    margin-bottom: 50px;
+    margin-top: 10px;
+}
+
+img.logo {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.7);
+}
+
+h1.name {
+    text-transform: uppercase;
+    font-size: 1.5rem;
     font-weight: bold;
-    font-size: 18px;
-}
-
-.menu {
-    display: flex;
-    list-style: none;
-}
-
-.menu li {
-    margin-left: 10px;
-}
-
-.menu li a {
-    text-decoration: none;
-    color: #333;
-}
-
-.banner {
-    background-color: rgb(5, 5, 104);
-    color: #fff;
-    height: 400px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.banner h1 {
+    text-align: center;
     margin-top: 20px;
 }
 
-.banner-info {
+span.slogan {
+    display: block;
     text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    color: rgba(51, 51, 51, 0.7);
+    margin-bottom: 35px;
 }
-
-.banner-info img {
-    width: 300px;
-    border-radius: 100%;
-}
-
-main {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-
-}
-
-main div {
-    padding: 20px;
-}
-
-main div p {
-    margin: 10px;
-}
-
-main img {
+.social-img ul {
+    margin: 0;
+    text-align: center;
     width: 100%;
-    border-radius: 20px
+    margin-bottom: 50px;
+
+}
+.social-img ul li {
+    display: inline;
+    background: rgba(204, 204, 204, 0.5);
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background 150ms ease-in-out;
+}
+.social-img ul li:hover {
+    background: #ccc;
 }
 
-footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
+.work {
+    margin-bottom: 20px;
+}
+
+.footer {
     text-align: center;
+    padding: 20px 0;
+    color: rgba(51, 51, 51, 0.5)
 }
